# pyuppsala

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md  build-wheels.sh  pyproject.toml  pyuppsala.pyi
.github/workflows/: ci.yml  release.yml
benchmarks/: etree_bench.py
docs/: api.rst  conf.py  etree.rst  examples.rst  exceptions.rst  index.rst  quickstart.rst  requirements.txt
python/pyuppsala/: __init__.py  __init__.pyi  _elementpath.py  etree.py  etree.pyi
src/: lib.rs
tests/: test_etree.py  test_pyuppsala.py
