[package]
name = "pyuppsala"
version = "0.7.1"
edition = "2021"
description = "Python bindings for the Uppsala XML library"
license = "BSD-2-Clause"
repository = "https://github.com/kushaldas/pyuppsala"

[lib]
name = "_pyuppsala"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py310"] }
# crates.io version requirement. 0.7.0 added the XSLT 1.0 engine consumed by the
# etree.XSLT facade; 0.7.1 is a security/hardening release (stricter XSD/DTD/XSLT
# handling), enforced transparently with no pyuppsala API change.
uppsala = "0.7.1"

# The cdylib is the final artifact, so a max-optimization release profile pays off
# here: fat LTO lets uppsala's SIMD/lookup-table scanning hot loops inline across
# the crate boundary into pyuppsala's call sites, and a single codegen unit gives
# the optimizer the whole picture.
[profile.release]
lto = "fat"
codegen-units = 1
