[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyuppsala"
version = "0.3.0"
description = "Python bindings for the Uppsala XML library"
requires-python = ">=3.10"
license = "BSD-2-Clause"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: XML",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
